--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
     name: romanian-energy-dashboard
     env: python
     plan: free
-    buildCommand: "pip install -r requirements-minimal.txt"
-    startCommand: "python -m src.data.models && gunicorn -w 2 -k uvicorn.workers.UvicornWorker src.web.optimized_app:app --bind 0.0.0.0:$PORT"
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python -m src.data.models && gunicorn -w 4 -k uvicorn.workers.UvicornWorker src.web.app:app --bind 0.0.0.0:$PORT"
     healthCheckPath: /health
     envVars:
       - key: RENDER
@@ -26,7 +26,7 @@ services:
     name: romanian-energy-collector
     env: python
     plan: free
-    buildCommand: "pip install -r requirements-minimal.txt"
+    buildCommand: "pip install -r requirements.txt"
     startCommand: "python scheduled_collector.py"
     envVars:
       - key: RENDER
